--- a/PixivUWP/ContactPanelPage.xaml
+++ b/PixivUWP/ContactPanelPage.xaml
@@ -5,9 +5,32 @@
     xmlns:local="using:PixivUWP"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:controls="using:PixivUWP.Controls"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        
+        <TextBlock x:Name="info" VerticalAlignment="Center" HorizontalAlignment="Center" HorizontalTextAlignment="Center" Visibility="Collapsed">Something is wrong</TextBlock>
+        <TextBlock x:Name="logininfo" VerticalAlignment="Center" HorizontalAlignment="Center" HorizontalTextAlignment="Center" Visibility="Visible">Logging in...</TextBlock>
+        <ScrollViewer ViewChanged="viewer_ViewChanged" x:Name="viewer" Visibility="Collapsed" HorizontalScrollMode="Disabled" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto">
+            <ListView
+                    x:Name="WorksListView"
+                    IsItemClickEnabled="True"
+                    ItemTemplate="{StaticResource workitem}"
+                    ScrollViewer.VerticalScrollMode="Disabled"
+                    ScrollViewer.HorizontalScrollMode="Disabled"
+                    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                    ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                <ListView.ItemContainerTransitions>
+                    <TransitionCollection>
+                        <AddDeleteThemeTransition/>
+                    </TransitionCollection>
+                </ListView.ItemContainerTransitions>
+                <ListView.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <controls:WaterfallPanel/>
+                    </ItemsPanelTemplate>
+                </ListView.ItemsPanel>
+            </ListView>
+        </ScrollViewer>
     </Grid>
 </Page>
