--- a/PixivUWP/Pages/DetailPage/BlankPage.xaml
+++ b/PixivUWP/Pages/DetailPage/BlankPage.xaml
@@ -36,7 +36,16 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.-
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
                 <StackPanel Orientation="Vertical" Grid.Column="1">
-                    <AutoSuggestBox x:Name="gotoBox" x:Uid="gotoBox" HorizontalAlignment="Stretch" PlaceholderText="输入Pixiv作品或作者ID..." Style="{StaticResource AutoSuggestWithoutBorder}" QueryIcon="Find" IsEnabled="False"/>
+                    <AutoSuggestBox 
+                        x:Name="gotoBox" 
+                        x:Uid="gotoBox"
+                        HorizontalAlignment="Stretch" 
+                        PlaceholderText="Enter author name or PixivID..." 
+                        BorderThickness="0"
+                        QueryIcon="Find"
+                        Style="{StaticResource AutoSuggestWithoutBorder}" 
+                        IsEnabled="False"
+                        />
                 </StackPanel>
             </Grid>
         </StackPanel>
